@@ -1,2 +1,2 @@
-TYPO3HtmlParser=function(editor){this.editor=editor;var cfg=editor.config;};TYPO3HtmlParser.I18N=TYPO3HtmlParser_langArray;TYPO3HtmlParser._pluginInfo={name:"TYPO3HtmlParser",version:"1.6",developer:"Stanislas Rolland",developer_url:"http://www.fructifor.ca/",c_owner:"Stanislas Rolland",sponsor:"Fructifor Inc.",sponsor_url:"http://www.fructifor.ca/",license:"GPL"};HTMLArea._wordClean=function(editor,body){var url=RTEarea[0]["pathParseHtmlModule"];var addParams=RTEarea[0]["RTEtsConfigParams"];HTMLArea._postback(url,{'editorNo':editor._editorNumber,'content':body.innerHTML},function(javascriptResponse){editor.setHTML(javascriptResponse)},addParams,RTEarea[editor._editorNumber]["typo3ContentCharset"]);return true;};
 
+TYPO3HtmlParser=function(editor){this.editor=editor;var cfg=editor.config;};TYPO3HtmlParser.I18N=TYPO3HtmlParser_langArray;TYPO3HtmlParser._pluginInfo={name:"TYPO3HtmlParser",version:"1.6",developer:"Stanislas Rolland",developer_url:"http://www.fructifor.ca/",c_owner:"Stanislas Rolland",sponsor:"Fructifor Inc.",sponsor_url:"http://www.fructifor.ca/",license:"GPL"};HTMLArea._wordClean=function(editor,body){var editorNo=editor._editorNumber;var url=RTEarea[0]["pathParseHtmlModule"];var addParams=RTEarea[editorNo]["RTEtsConfigParams"];HTMLArea._postback(url,{'editorNo':editorNo,'content':body.innerHTML},function(javascriptResponse){editor.setHTML(javascriptResponse)},addParams,RTEarea[editor._editorNumber]["typo3ContentCharset"]);return true;};
