@@ -48,9 +48,10 @@ TYPO3HtmlParser._pluginInfo = {
 };
 
 HTMLArea._wordClean = function(editor, body) {
+	var editorNo = editor._editorNumber;
 	var url = RTEarea[0]["pathParseHtmlModule"];
-	var addParams = RTEarea[0]["RTEtsConfigParams"];
-	HTMLArea._postback(url, {'editorNo' : editor._editorNumber, 'content' : body.innerHTML },
+	var addParams = RTEarea[editorNo]["RTEtsConfigParams"];
+	HTMLArea._postback(url, {'editorNo' : editorNo, 'content' : body.innerHTML },
 		function(javascriptResponse) { editor.setHTML(javascriptResponse) }, addParams, RTEarea[editor._editorNumber]["typo3ContentCharset"]);
 	return true;
 };
