@@ -1,2 +1,2 @@
-UserElements=function(editor){this.editor=editor;var cfg=editor.config;var self=this;var actionHandlerFunctRef=UserElements.actionHandler(this);cfg.registerButton("UserElements",UserElements_langArray["Insert custom element"],editor.imgURL("ed_user.gif","UserElements"),false,actionHandlerFunctRef);};UserElements.I18N=UserElements_langArray;UserElements._pluginInfo={name:"UserElements",version:"1.5",developer:"Stanislas Rolland",developer_url:"http://www.fructifor.ca/",c_owner:"Stanislas Rolland",sponsor:"Fructifor Inc.",sponsor_url:"http://www.fructifor.ca/",license:"GPL"};UserElements.actionHandler=function(instance){return(function(editor){instance.buttonPress(editor);});};UserElements.prototype.buttonPress=function(editor){var editorNo=editor._doc._editorNo;var backreturn;var addUrlParams="?"+RTEarea[0]["RTEtsConfigParams"];editor._popupDialog(RTEarea[0]["pathUserModule"]+addUrlParams+"&editorNo="+editorNo,null,backreturn,550,350,null,"yes");return false;};
 
+UserElements=function(editor){this.editor=editor;var cfg=editor.config;var self=this;var actionHandlerFunctRef=UserElements.actionHandler(this);cfg.registerButton("UserElements",UserElements_langArray["Insert custom element"],editor.imgURL("ed_user.gif","UserElements"),false,actionHandlerFunctRef);};UserElements.I18N=UserElements_langArray;UserElements._pluginInfo={name:"UserElements",version:"1.5",developer:"Stanislas Rolland",developer_url:"http://www.fructifor.ca/",c_owner:"Stanislas Rolland",sponsor:"Fructifor Inc.",sponsor_url:"http://www.fructifor.ca/",license:"GPL"};UserElements.actionHandler=function(instance){return(function(editor){instance.buttonPress(editor);});};UserElements.prototype.buttonPress=function(editor){var editorNo=editor._doc._editorNo;var backreturn;var addUrlParams="?"+RTEarea[editorNo]["RTEtsConfigParams"];editor._popupDialog(RTEarea[0]["pathUserModule"]+addUrlParams+"&editorNo="+editorNo,null,backreturn,550,350,null,"yes");return false;};
